changed title.name to bigger font in desktop

--- a/code/style.css
+++ b/code/style.css
@@ -305,6 +305,10 @@ img.small-news {
   "logo title1 title2 . . . navlink1 navlink2 navlink3 navlink4"; 
 }
 
+h1.title-name {
+  width: 300px;
+  font-size: 52px;
+}
 
 .logo {
   width: 100px;
