--- a/code/style.css
+++ b/code/style.css
@@ -85,7 +85,7 @@ h2 {
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 7px 7px gray;
-  text-align: justify;
+  text-align: center;
   transition: transform .3s;
 }
 
@@ -124,7 +124,7 @@ footer {
   .other-news {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .news-card {
