--- a/code/style.css
+++ b/code/style.css
@@ -19,7 +19,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-.Top-title {
+.top-title {
   margin-left: 15px;
 }
 .logo {
@@ -38,6 +38,7 @@ body {
 }
 
 /*Big news section*/
+
 .big-news-container {
   margin: 50px;
   border-radius: 25px;
@@ -49,15 +50,17 @@ body {
 .big-news-title {
   margin-left: 30px;
 }
+
 .big-news-title:hover {
   color: rgb(232, 204, 232);
 }
 
-.big-news-child {
+.big-news-items {
   margin: 0px 15px 15px;
   display: flex;
   justify-content: space-evenly;
 }
+
 .img-big-news {
   border-radius: 25px;
   box-shadow: 10px 10px 10px grey;
@@ -73,6 +76,7 @@ body {
   margin-left: 20px;
   width: 50%;
 }
+
 .big-news-text:hover {
   color: rgb(232, 204, 232);
 }
@@ -98,6 +102,10 @@ body {
   align-items: center;
 }
 
+.small-news-title:hover {
+  color: rgb(232, 204, 232);
+}
+
 .img-small-news {
   border-radius: 10px;
   width: 150px;
@@ -107,27 +115,22 @@ body {
   box-shadow: 10px 10px 10px grey;
 }
 
-.small-news-title {
-  margin: 5px;
-}
-
-.small-news-title:hover {
-  color: rgb(232, 204, 232);
-}
-
 /* Media queries tablet */
 
 @media (min-width: 768px) and (max-width: 992px) {
   .header-container {
     justify-content: space-between;
   }
+
   .logo {
     display: flex;
     margin-right: 20px;
   }
+
   .big-news-title {
-    margin-left: 65px;
+    margin-left: 50px;
   }
+
   .small-news-container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -152,6 +155,7 @@ body {
   .nav-link:hover {
     color: rgb(153, 63, 153);
   }
+
   .big-news-title {
     margin-left: 100px;
   }
@@ -162,6 +166,7 @@ body {
     align-items: center;
     justify-content: center;
   }
+
   .small-news {
     width: 10%;
   }
