--- a/code/style.css
+++ b/code/style.css
@@ -123,6 +123,7 @@ p {
  .bn-text h1 {
      font-size: 16px;
      padding-bottom: 10px;
+     color: coral;
  }
 
 /************* SMALL NEWS SECTION ***************/
@@ -160,6 +161,7 @@ p {
 .sn-card h3 {
     font-size: 18px;
     padding: 5px;
+    color: rgb(199, 182, 28);
 }
 
 .sn-card p{
