added the README file

--- a/code/style.css
+++ b/code/style.css
@@ -161,7 +161,7 @@ p {
 .sn-card h3 {
     font-size: 18px;
     padding: 5px;
-    color: rgb(199, 182, 28);
+    color: coral;
 }
 
 .sn-card p{
@@ -266,8 +266,8 @@ p {
     }
 
     .navigation a:hover {
-        color: rgb(231, 166, 231);
-        text-decoration: underline;
+     color: coral;
+     text-decoration: underline;
     }
 
     /************** BIG NEWS SECTION ******************/
